journey-19-deployment-docker-kubernetes/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-journey
spec:
  rules:
    - host: go.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-journey
                port:
                  number: 80
